# physics-engine

./: CMakeLists.txt  Force.cpp  Force.h  Forces.h  README.MD  Sortie-Déboguer.txt  Vector3.cpp  amas.cpp  draw.py  imgui.ini  main.cpp  physics-engine.sln  physics-engine.vcxproj  physics-engine.vcxproj.filters  pool.cpp  test1.cpp  test2.cpp  test3.cpp  three_bodies.cpp  todo.txt
demo/: amas.cpp  pool.cpp  solar.cpp  whirlpool.cpp
engine/: Force.cpp  Force.h  Forces.cpp  Forces.h  IForceAppliable.h  Matrix3.cpp  Matrix4.cpp  Matrix4.h  NaiveParticleContactGenerator.cpp  NaiveParticleContactGenerator.h  ParticleCable.cpp  ParticleCable.h  ParticleContact.cpp  ParticleContact.h  ParticleContactGenerator.h  ParticleContactResolver.cpp  ParticleContactResolver.h  ParticleLink.cpp  ParticleLink.h  ParticleRod.cpp  ParticleRod.h  Particule.cpp  Particule.h  PhysicWorld.cpp  PhysicWorld.h  Projet Moteur de Jeu.cpp  Quaternion.cpp  Quaternion.h  Registry.cpp  Registry.h  Rigidbody.cpp  Rigidbody.h  Transform.cpp  Transform.h  Vector3.cpp  Vector3.h  WallContactGenerator.cpp  WallContactGenerator.h
engine/contact/: NaiveParticleContactGenerator.cpp  ParticleCable.cpp  ParticleContact.cpp  ParticleContact.h  ParticleContactGenerator.h  ParticleContactResolver.cpp  ParticleContactResolver.h  ParticleLink.h  ParticleRod.cpp  WallContactGenerator.cpp  WallContactGenerator.h
resources/shaders/: default.vert
src/core/: Angles.h  Matrix3.cpp  Matrix3.h  Matrix4.cpp  Matrix4.h  Quaternion.cpp  Quaternion.h  Vector3.cpp  Vector3.h  math.h
src/graphics/: api.cpp  api.h  camera.cpp  camera.h  ebo.cpp  ebo.h  glad.c  renderer.cpp  renderer.h  shader.cpp  shader.h  texture.cpp  texture.h  vao.cpp  vao.h  vbo.cpp  vbo.h
src/include/glad/: glad.h
src/physics/: Force.cpp  Force.h  IForceAppliable.cpp  IForceAppliable.h  Particule.cpp  Particule.h  PhysicWorld.cpp  PhysicWorld.h  Registry.cpp  Registry.h  Rigidbody.cpp  Rigidbody.h  Transform.h
src/physics/contact/: BVHNode.cpp  BVHNode.h  BoundingSphere.cpp  BoundingSphere.h  CollisionData.cpp  CollisionData.h  CollisionDetector.cpp  CollisionDetector.h  CollisionInterpretor.cpp  CollisionInterpretor.h  Contact.cpp  Contact.h  NaiveParticleContactGenerator.cpp  NaiveParticleContactGenerator.h  ParticleCable.cpp  ParticleCable.h  ParticleContact.cpp  ParticleContact.h  ParticleContactResolver.h  ParticleLink.cpp  PotentialContact.cpp  PotentialContact.h  WallContactGenerator.cpp  WallContactGenerator.h
src/physics/contact/primitive/: Box.cpp  Box.h  Plane.cpp  Plane.h  Primitive.h  Sphere.cpp  Sphere.h
src/test/: test1.cpp  test2.cpp  test3.cpp  test_broad_phase.cpp  test_collider.cpp  test_combined_phases.cpp  test_quat.cpp  test_rigidbody.cpp
test/: test1.cpp  test2.cpp  test3.cpp  test_quat.cpp
